--- a/CSS/style.css
+++ b/CSS/style.css
@@ -93,17 +93,42 @@ nav{
 }
 
 
+/*Serviços*/
+.service-container{
+    padding: 5rem 0;
+}
 
-
-
-
-
-
-
-
-
-
-
-
+.service-container ul{
+    display: flex;
+    width: 90%;
+    margin: 0 auto;
+}
+.service-container li{
+    flex: 1 1 200px;
+    list-style: none;
+    text-align: center;
+    padding: 20px;
+}
+    
+.fas{
+    font-size: 60px;
+    margin-bottom: 20px;
+}
+.fa-shield-alt{
+    color: #0a843a;
+}
+.fa-rocket {
+    color: #ef3f29;
+}
+.fa-comments{
+    color: #ef8f29;
+}
+.service-container h3{
+    margin-bottom: 25px;
+    color:#333;
+}
+.service-container p{
+    line-height: 24px;
+}
 
 
